# bittensor-subnet

./: README.md  SETUP.md  ground_truth.json  output.json  pyproject.toml  task.json
neurons/: miner.py
template/: protocol.py
template/api/: dummy.py
template/validator/: agent_runner.py  forward.py  reward.py  scoring.py
tests/: test_template_validator.py
