[tool.poetry]
name = "bittensor-subnet-template"
version = "0.1.0"
description = ""
authors = ["parkbittensor <parkbittensor2021@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
bittensor-cli = "^9.17.0"
bittensor = "^10.0.1"
torch = "^2.9.1"
openai = "^2.15.0"
requests = "^2.32.5"
google-generativeai = "^0.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
